--- a/themes/uhsg_theme/sass/components/_degree-programme-switcher.scss
+++ b/themes/uhsg_theme/sass/components/_degree-programme-switcher.scss
@@ -104,6 +104,7 @@
   }
   &.collapsed {
     position: fixed;
+    z-index: 102;
     margin-top: 0;
     top: 0;
     left: 0;
